# StackfullTasks

./: .gitignore  CMakeLists.txt  CMakeUserPresets[EXAMPLE].json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
include/: SimpleTask.h  Task.h  Tasklet.h
src/: SimpleTask.cpp  StackSwitch.asm  Tasklet.cpp
test/: CMakeLists.txt
test/src/: SimpleTaskTest.cpp  TaskTest.cpp  TaskletTest.cpp  TestFixture.cpp  TestFixture.h
